[package]
name = "mmc5983ma"
version = "0.1.0-rc1"
edition = "2021"
description = "Async driver for the mmc5983ma"
authors = ["John Schmidt <john@john2143.com>"]
license = "MIT"
repository = "https://github.com/John2143/mmc5983ma"
readme = "README.md"
keywords = ["embedded-hal-async", "async", "no_std", "mmc5983", "magnetometer"]

[features]
default = []
defmt = ["dep:defmt"]
float = []

[dependencies]
bitfield = "0.15.0"
defmt = { version = "0.3.8", "optional" = true }
embedded-hal-async = "1.0.0"
